# nasa-space-apps

./: .gitignore  README.md  pyproject.toml  serve_frontend.py  start_server.sh
backend/: api.py  api_examples.py  create_visualizations.py  data_loader.py  data_preprocessing.py  download_lightcurves.py  ensemble_predictor.py  feature_engineering.py  gaia_crossmatch.py  physics_engine.py  test_api.py  train_models.py
data/: TOI_2025.10.04_05.30.02.csv  cumulative_2025.10.04_05.29.54.csv
data/processed/: data_quality_report.json  features_test.csv  features_train.csv  features_val.csv  koi_test.csv  koi_train.csv  koi_val.csv  koi_with_gaia_sample.csv
frontend/: index.html
frontend/src/: main.js
models/: adaboost.pkl  feature_names.json  lightgbm.pkl  metrics.json  xgboost.pkl
